[gd_scene load_steps=17 format=2]

[ext_resource path="res://press_start_2p/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Titulo do jogo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Assets/Assets/Highway Artwork/Layers/highway-sky.png" type="Texture" id=3]
[ext_resource path="res://Assets/Assets/Assets/Highway Artwork/Layers/highway.png" type="Texture" id=4]
[ext_resource path="res://Assets/Assets/Assets/Highway Artwork/Layers/background-light.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=6]

[sub_resource type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 8 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Tela inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Highway-sky" type="Sprite" parent="."]
position = Vector2( 960, 536 )
scale = Vector2( 4.78, 4.46667 )
texture = ExtResource( 3 )

[node name="TituloDoJogo" type="Sprite" parent="Highway-sky"]
position = Vector2( 0.836792, -32.2388 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Background-light" type="Sprite" parent="Highway-sky"]
position = Vector2( -176.569, 37.8358 )
scale = Vector2( 0.78, 0.616 )
texture = ExtResource( 5 )

[node name="Background-light2" type="Sprite" parent="Highway-sky"]
position = Vector2( 162.343, 39.403 )
scale = Vector2( 0.78, 0.616 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Highway-sky"]

[node name="control" type="VBoxContainer" parent="."]
anchor_left = 0.55
anchor_top = 0.704
anchor_right = 0.55
anchor_bottom = 0.704
margin_left = -720.0
margin_top = -344.32
margin_right = -319.0
margin_bottom = -254.32
rect_scale = Vector2( 3, 3 )
theme = SubResource( 11 )

[node name="StartButton" type="Button" parent="control"]
margin_right = 401.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../quitbtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.913725, 0.960784, 0.0901961, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.592157, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "start"

[node name="Controles" type="Button" parent="control"]
margin_top = 28.0
margin_right = 401.0
margin_bottom = 52.0
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.945098, 0.996078, 0.0980392, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.592157, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "controles"

[node name="quitbtn" type="Button" parent="control"]
margin_top = 56.0
margin_right = 401.0
margin_bottom = 80.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.94902, 0.937255, 0.0745098, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.592157, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "sair"

[node name="Estrada 2" type="Sprite" parent="."]
position = Vector2( 208, 920 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 4 )

[node name="Estrada 3" type="Sprite" parent="."]
position = Vector2( 612, 920 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 4 )

[node name="Estrada 4" type="Sprite" parent="."]
position = Vector2( 1016, 919 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 4 )

[node name="Estrada 5" type="Sprite" parent="."]
position = Vector2( 1418, 920 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 4 )

[node name="Estrada 6" type="Sprite" parent="."]
position = Vector2( 1822, 921 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 4 )

[connection signal="pressed" from="control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="control/Controles" to="." method="_on_Controles_pressed"]
[connection signal="pressed" from="control/quitbtn" to="." method="_on_quitbtn_pressed"]
